--- a/docs/en-jupyter_notebook/azure_aks/02_register_device.ipynb
+++ b/docs/en-jupyter_notebook/azure_aks/02_register_device.ipynb
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "change ${PJ_ROOT} to your path of `example-guide_demo`."
+    "change ${PJ_ROOT} to your path of `example-guide-demo`."
    ]
   },
   {
@@ -40,7 +40,7 @@
    },
    "outputs": [],
    "source": [
-    "export PJ_ROOT=\"${HOME}/example-guide_demo\"\n",
+    "export PJ_ROOT=\"${HOME}/example-guide-demo\"\n",
     "cd ${PJ_ROOT};pwd"
    ]
   },
@@ -50,7 +50,7 @@
    "source": [
     "example)\n",
     "```\n",
-    "/Users/user/example-guide_demo\n",
+    "/Users/user/example-guide-demo\n",
     "```"
    ]
   },
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "load from `example-guide_demo`"
+    "load from `example-guide-demo`"
    ]
   },
   {
@@ -1747,6 +1747,7 @@
    "metadata": {},
    "source": [
     "when executing the above command, show below messages on the opened terminal.\n",
+    "\n",
     "example)\n",
     "```\n",
     "Client mosq/A8qOmsuUfYwYuMDNBr received PUBLISH (d0, q0, r0, m0, '/comm_robot/xperiahello_01/attrs', ... (48 bytes))\n",
@@ -1919,6 +1920,7 @@
    "metadata": {},
    "source": [
     "when executing the above command, show below messages on the opened terminal.\n",
+    "\n",
     "example)\n",
     "```\n",
     "Client mosq/gZ1wcOVoAWYDodg8I6 received PUBLISH (d0, q0, r0, m0, '/mobile_robot/rosbot2_01/cmd', ... (18 bytes))\n",
@@ -2074,6 +2076,7 @@
    "metadata": {},
    "source": [
     "when executing the above command, show below messages on the opened terminal.\n",
+    "\n",
     "example)\n",
     "```\n",
     "Client mosq/gZ1wcOVoAWYDodg8I6 received PUBLISH (d0, q0, r0, m0, '/mobile_robot/rosbot2_01/cmdexe', ... (27 bytes))\n",
@@ -2271,10 +2274,11 @@
    "metadata": {},
    "source": [
     "when executing the above command, show below messages on the opened terminal.\n",
+    "\n",
     "example)\n",
     "```\n",
     "Client mosq/gZ1wcOVoAWYDodg8I6 received PUBLISH (d0, q0, r0, m0, '/mobile_robot/rosbot2_01/attrs', ... (48 bytes))\n",
-    "2019-05-11T10:57:10.1557539830+09:00|r_mode|Navi\n",
+    "2019-05-11T10:57:10.1557539830+09:00|r_mode|navi\n",
     "```"
    ]
   },
@@ -2470,6 +2474,7 @@
    "metadata": {},
    "source": [
     "when executing the above command, show below messages on the opened terminal.\n",
+    "\n",
     "example)\n",
     "```\n",
     "Client mosq/gZ1wcOVoAWYDodg8I6 received PUBLISH (d0, q0, r0, m0, '/mobile_robot/rosbot2_01/attrs', ... (61 bytes))\n",
@@ -2686,6 +2691,7 @@
    "metadata": {},
    "source": [
     "when executing the above command, show below messages on the opened terminal.\n",
+    "\n",
     "example)\n",
     "```\n",
     "Client mosq/gZ1wcOVoAWYDodg8I6 received PUBLISH (d0, q0, r0, m0, '/mobile_robot/rosbot2_01/attrs', ... (123 bytes))\n",
@@ -2976,6 +2982,7 @@
    "metadata": {},
    "source": [
     "when executing the above command, show below messages on the opened terminal.\n",
+    "\n",
     "example)\n",
     "```\n",
     "Client mosq/gZ1wcOVoAWYDodg8I6 received PUBLISH (d0, q0, r0, m0, '/button/button_01/attrs', ... (78 bytes))\n",
@@ -3148,6 +3155,7 @@
    "metadata": {},
    "source": [
     "when executing the above command, show below messages on the opened terminal.\n",
+    "\n",
     "example)\n",
     "```\n",
     "Client mosq/gZ1wcOVoAWYDodg8I6 received PUBLISH (d0, q0, r0, m0, '/led/led_01/cmd', ... (16 bytes))\n",
@@ -3248,6 +3256,7 @@
    "metadata": {},
    "source": [
     "when executing the above command, show below messages on the opened terminal.\n",
+    "\n",
     "example)\n",
     "```\n",
     "Client mosq/gZ1wcOVoAWYDodg8I6 received PUBLISH (d0, q0, r0, m0, '/led/led_01/cmdexe', ... (25 bytes))\n",
@@ -3259,7 +3268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### confirm mobile_robot entity"
+    "### confirm dest_led entity"
    ]
   },
   {
