--- a/docs/en-jupyter_notebook/azure_aks/03_register_business_logic.ipynb
+++ b/docs/en-jupyter_notebook/azure_aks/03_register_business_logic.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "change ${PJ_ROOT} to your path of `example-guide_demo`."
+    "change ${PJ_ROOT} to your path of `example-guide-demo`."
    ]
   },
   {
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "export PJ_ROOT=\"${HOME}/example-guide_demo\"\n",
+    "export PJ_ROOT=\"${HOME}/example-guide-demo\"\n",
     "cd ${PJ_ROOT};pwd"
    ]
   },
@@ -46,7 +46,7 @@
    "source": [
     "example)\n",
     "```\n",
-    "/Users/user/example-guide_demo\n",
+    "/Users/user/example-guide-demo\n",
     "```"
    ]
   },
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "load from `example-guide_demo`"
+    "load from `example-guide-demo`"
    ]
   },
   {
@@ -763,6 +763,21 @@
     "  }\n",
     "}\n",
     "__EOS__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "example)\n",
+    "```\n",
+    "HTTP/1.1 204 No Content\n",
+    "content-length: 0\n",
+    "fiware-correlator: eb4c2342-73db-11e9-bd2e-62712902dfb1\n",
+    "date: Sat, 11 May 2019 10:59:59 GMT\n",
+    "x-envoy-upstream-service-time: 5\n",
+    "server: envoy\n",
+    "```"
    ]
   },
   {
