update the guide-demo container and documents

--- a/docs/en-jupyter_notebook/azure_aks/02_register_device.ipynb
+++ b/docs/en-jupyter_notebook/azure_aks/02_register_device.ipynb
@@ -2241,206 +2241,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### publish a MQTT message to emulate receiving the internal state of mobile_robot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "d=$(date '+%Y-%m-%dT%H:%M:%S.%s+09:00')\n",
-    "mosquitto_pub -h mqtt.${DOMAIN} -p 8883 --cafile ${CORE_ROOT}/secrets/DST_Root_CA_X3.pem -d -u iotagent -P ${MQTT__iotagent} -t /${MOBILE_ROBOT_TYPE}/${MOBILE_ROBOT_ID}/attrs -m \"${d}|r_mode|navi\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "example)\n",
-    "```\n",
-    "Client mosq/2ykUaqktpEWPLuk0sv sending CONNECT\n",
-    "Client mosq/2ykUaqktpEWPLuk0sv received CONNACK (0)\n",
-    "Client mosq/2ykUaqktpEWPLuk0sv sending PUBLISH (d0, q0, r0, m1, '/mobile_robot/rosbot2_01/attrs', ... (48 bytes))\n",
-    "Client mosq/2ykUaqktpEWPLuk0sv sending DISCONNECT\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "when executing the above command, show below messages on the opened terminal.\n",
-    "\n",
-    "example)\n",
-    "```\n",
-    "Client mosq/gZ1wcOVoAWYDodg8I6 received PUBLISH (d0, q0, r0, m0, '/mobile_robot/rosbot2_01/attrs', ... (48 bytes))\n",
-    "2019-05-11T10:57:10.1557539830+09:00|r_mode|navi\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### confirm mobile_robot entity"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "TOKEN=$(cat ${CORE_ROOT}/secrets/auth-tokens.json | jq '.[0].settings.bearer_tokens[0].token' -r)\n",
-    "curl -sS -H \"Authorization: bearer ${TOKEN}\" -H \"Fiware-Service: ${FIWARE_SERVICE}\" -H \"Fiware-Servicepath: ${MOBILE_ROBOT_SERVICEPATH}\" https://api.${DOMAIN}/orion/v2/entities/${MOBILE_ROBOT_ID}/ | jq ."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "example)\n",
-    "```json\n",
-    "{\n",
-    "  \"id\": \"rosbot2_01\",\n",
-    "  \"type\": \"mobile_robot\",\n",
-    "  \"TimeInstant\": {\n",
-    "    \"type\": \"ISO8601\",\n",
-    "    \"value\": \"2019-05-11T10:57:10.1557539830+09:00\",\n",
-    "    \"metadata\": {}\n",
-    "  },\n",
-    "  \"capacity\": {\n",
-    "    \"type\": \"float32\",\n",
-    "    \"value\": \" \",\n",
-    "    \"metadata\": {}\n",
-    "  },\n",
-    "  \"charge\": {\n",
-    "    \"type\": \"float32\",\n",
-    "    \"value\": \" \",\n",
-    "    \"metadata\": {}\n",
-    "  },\n",
-    "  \"current\": {\n",
-    "    \"type\": \"float32\",\n",
-    "    \"value\": \" \",\n",
-    "    \"metadata\": {}\n",
-    "  },\n",
-    "  \"design_capacity\": {\n",
-    "    \"type\": \"float32\",\n",
-    "    \"value\": \" \",\n",
-    "    \"metadata\": {}\n",
-    "  },\n",
-    "  \"move_info\": {\n",
-    "    \"type\": \"commandResult\",\n",
-    "    \"value\": \"received up\",\n",
-    "    \"metadata\": {\n",
-    "      \"TimeInstant\": {\n",
-    "        \"type\": \"ISO8601\",\n",
-    "        \"value\": \"2019-05-11T01:46:43.407Z\"\n",
-    "      }\n",
-    "    }\n",
-    "  },\n",
-    "  \"move_status\": {\n",
-    "    \"type\": \"commandStatus\",\n",
-    "    \"value\": \"OK\",\n",
-    "    \"metadata\": {\n",
-    "      \"TimeInstant\": {\n",
-    "        \"type\": \"ISO8601\",\n",
-    "        \"value\": \"2019-05-11T01:46:43.407Z\"\n",
-    "      }\n",
-    "    }\n",
-    "  },\n",
-    "  \"percentage\": {\n",
-    "    \"type\": \"float32\",\n",
-    "    \"value\": \" \",\n",
-    "    \"metadata\": {}\n",
-    "  },\n",
-    "  \"r_mode\": {\n",
-    "    \"type\": \"string\",\n",
-    "    \"value\": \"navi\",\n",
-    "    \"metadata\": {\n",
-    "      \"TimeInstant\": {\n",
-    "        \"type\": \"ISO8601\",\n",
-    "        \"value\": \"2019-05-11T10:57:10.1557539830+09:00\"\n",
-    "      }\n",
-    "    }\n",
-    "  },\n",
-    "  \"r_state\": {\n",
-    "    \"type\": \"string\",\n",
-    "    \"value\": \" \",\n",
-    "    \"metadata\": {}\n",
-    "  },\n",
-    "  \"theta\": {\n",
-    "    \"type\": \"float32\",\n",
-    "    \"value\": \" \",\n",
-    "    \"metadata\": {}\n",
-    "  },\n",
-    "  \"voltage\": {\n",
-    "    \"type\": \"float32\",\n",
-    "    \"value\": \" \",\n",
-    "    \"metadata\": {}\n",
-    "  },\n",
-    "  \"x\": {\n",
-    "    \"type\": \"float32\",\n",
-    "    \"value\": \" \",\n",
-    "    \"metadata\": {}\n",
-    "  },\n",
-    "  \"y\": {\n",
-    "    \"type\": \"float32\",\n",
-    "    \"value\": \" \",\n",
-    "    \"metadata\": {}\n",
-    "  },\n",
-    "  \"move\": {\n",
-    "    \"type\": \"string\",\n",
-    "    \"value\": \"\",\n",
-    "    \"metadata\": {}\n",
-    "  }\n",
-    "}\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### confirm cygnus-mongo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "kubectl exec mongodb-0 -c mongodb-replicaset -- mongo sth_${FIWARE_SERVICE} --eval \"db.getCollection(\\\"sth_${MOBILE_ROBOT_SERVICEPATH}_${MOBILE_ROBOT_ID}_${MOBILE_ROBOT_TYPE}\\\").find().sort({recvTime: -1})\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "example)\n",
-    "```\n",
-    "MongoDB shell version v4.1.10\n",
-    "connecting to: mongodb://127.0.0.1:27017/sth_guide_demo?compressors=disabled&gssapiServiceName=mongodb\n",
-    "Implicit session: session { \"id\" : UUID(\"292767da-6c76-4f5a-9bee-3a86861b46b5\") }\n",
-    "MongoDB server version: 4.1.10\n",
-    "{ \"_id\" : ObjectId(\"5cd62bf541f12a0011c4e5a6\"), \"recvTime\" : ISODate(\"2019-05-11T01:57:10.155Z\"), \"attrName\" : \"r_mode\", \"attrType\" : \"string\", \"attrValue\" : \"Navi\" }\n",
-    "...\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### publish a MQTT message to emulate receiving the position of mobile_robot"
    ]
   },
@@ -2453,7 +2253,7 @@
    "outputs": [],
    "source": [
     "d=$(date '+%Y-%m-%dT%H:%M:%S.%s+09:00')\n",
-    "mosquitto_pub -h mqtt.${DOMAIN} -p 8883 --cafile ${CORE_ROOT}/secrets/DST_Root_CA_X3.pem -d -u iotagent -P ${MQTT__iotagent} -t /${MOBILE_ROBOT_TYPE}/${MOBILE_ROBOT_ID}/attrs -m \"${d}|x|1.05|y|0.01|theta|0.05\""
+    "mosquitto_pub -h mqtt.${DOMAIN} -p 8883 --cafile ${CORE_ROOT}/secrets/DST_Root_CA_X3.pem -d -u iotagent -P ${MQTT__iotagent} -t /${MOBILE_ROBOT_TYPE}/${MOBILE_ROBOT_ID}/attrs -m \"${d}|x|1.05|y|0.01|theta|0.05|r_mode|navi\""
    ]
   },
   {
@@ -2478,7 +2278,7 @@
     "example)\n",
     "```\n",
     "Client mosq/gZ1wcOVoAWYDodg8I6 received PUBLISH (d0, q0, r0, m0, '/mobile_robot/rosbot2_01/attrs', ... (61 bytes))\n",
-    "2019-05-11T11:19:53.1557541193+09:00|x|1.05|y|0.01|theta|0.05\n",
+    "2019-05-11T11:19:53.1557541193+09:00|x|1.05|y|0.01|theta|0.05|r_mode|navi\n",
     "```"
    ]
   },
@@ -2562,11 +2362,11 @@
     "  },\n",
     "  \"r_mode\": {\n",
     "    \"type\": \"string\",\n",
-    "    \"value\": \"Navi\",\n",
+    "    \"value\": \"navi\",\n",
     "    \"metadata\": {\n",
     "      \"TimeInstant\": {\n",
     "        \"type\": \"ISO8601\",\n",
-    "        \"value\": \"2019-05-11T10:57:10.1557539830+09:00\"\n",
+    "        \"value\": \"2019-05-11T11:19:53.1557541193+09:00\"\n",
     "      }\n",
     "    }\n",
     "  },\n",
@@ -2647,6 +2447,7 @@
     "connecting to: mongodb://127.0.0.1:27017/sth_guide_demo?compressors=disabled&gssapiServiceName=mongodb\n",
     "Implicit session: session { \"id\" : UUID(\"488d73df-3ae2-4602-965d-1c84a8d2f6e1\") }\n",
     "MongoDB server version: 4.1.10\n",
+    "{ \"_id\" : ObjectId(\"5cd6314a130da800118c55a0\"), \"recvTime\" : ISODate(\"2019-05-11T02:19:53.155Z\"), \"attrName\" : \"r_mode\", \"attrType\" : \"string\", \"attrValue\" : \"navi\" }\n",
     "{ \"_id\" : ObjectId(\"5cd6314a130da800118c55a1\"), \"recvTime\" : ISODate(\"2019-05-11T02:19:53.155Z\"), \"attrName\" : \"x\", \"attrType\" : \"float32\", \"attrValue\" : \"1.05\" }\n",
     "{ \"_id\" : ObjectId(\"5cd6314a130da800118c55a2\"), \"recvTime\" : ISODate(\"2019-05-11T02:19:53.155Z\"), \"attrName\" : \"y\", \"attrType\" : \"float32\", \"attrValue\" : \"0.01\" }\n",
     "{ \"_id\" : ObjectId(\"5cd6314a130da800118c55a3\"), \"recvTime\" : ISODate(\"2019-05-11T02:19:53.155Z\"), \"attrName\" : \"theta\", \"attrType\" : \"float32\", \"attrValue\" : \"0.05\" }\n",
@@ -2804,11 +2605,11 @@
     "  },\n",
     "  \"r_mode\": {\n",
     "    \"type\": \"string\",\n",
-    "    \"value\": \"Navi\",\n",
+    "    \"value\": \"navi\",\n",
     "    \"metadata\": {\n",
     "      \"TimeInstant\": {\n",
     "        \"type\": \"ISO8601\",\n",
-    "        \"value\": \"2019-05-11T10:57:10.1557539830+09:00\"\n",
+    "        \"value\": \"2019-05-11T11:19:53.1557541193+09:00\"\n",
     "      }\n",
     "    }\n",
     "  },\n",
