--- a/docs/en-jupyter_notebook/azure_aks/03_register_business_logic.ipynb
+++ b/docs/en-jupyter_notebook/azure_aks/03_register_business_logic.ipynb
@@ -245,14 +245,14 @@
     "      \"type\": \"${MOBILE_ROBOT_TYPE}\"\n",
     "    }],\n",
     "    \"condition\": {\n",
-    "      \"attrs\": [\"r_mode\"]\n",
+    "      \"attrs\": [\"x\", \"y\", \"theta\", \"r_mode\"]\n",
     "    }\n",
     "  },\n",
     "  \"notification\": {\n",
     "    \"http\": {\n",
     "      \"url\": \"http://guide-demo:3000/notify/update-mobilerobot-state/\"\n",
     "    },\n",
-    "    \"attrs\": [\"r_mode\"]\n",
+    "    \"attrs\": [\"x\", \"y\", \"theta\", \"r_mode\"]\n",
     "  }\n",
     "}\n",
     "__EOS__"
@@ -359,6 +359,9 @@
     "      ],\n",
     "      \"condition\": {\n",
     "        \"attrs\": [\n",
+    "          \"x\",\n",
+    "          \"y\",\n",
+    "          \"theta\",\n",
     "          \"r_mode\"\n",
     "        ]\n",
     "      }\n",
@@ -367,6 +370,9 @@
     "      \"timesSent\": 1,\n",
     "      \"lastNotification\": \"2019-05-11T07:20:44.00Z\",\n",
     "      \"attrs\": [\n",
+    "        \"x\",\n",
+    "        \"y\",\n",
+    "        \"theta\",\n",
     "        \"r_mode\"\n",
     "      ],\n",
     "      \"attrsFormat\": \"normalized\",\n",
@@ -374,198 +380,6 @@
     "        \"url\": \"http://guide-demo:3000/notify/update-mobilerobot-state/\"\n",
     "      },\n",
     "      \"lastSuccess\": \"2019-05-11T07:20:44.00Z\",\n",
-    "      \"lastSuccessCode\": 200\n",
-    "    }\n",
-    "  }\n",
-    "]\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## register `/notify/update-mobilerobot-pos/` as a subscriber of mobile_robot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "TOKEN=$(cat ${CORE_ROOT}/secrets/auth-tokens.json | jq '.[0].settings.bearer_tokens[0].token' -r)\n",
-    "curl -i -H \"Authorization: bearer ${TOKEN}\" -H \"Fiware-Service: ${FIWARE_SERVICE}\" -H \"Fiware-ServicePath: ${MOBILE_ROBOT_SERVICEPATH}\" -H \"Content-Type: application/json\" https://api.${DOMAIN}/orion/v2/subscriptions/ -X POST -d @- <<__EOS__\n",
-    "{\n",
-    "  \"subject\": {\n",
-    "    \"entities\": [{\n",
-    "      \"idPattern\": \"${MOBILE_ROBOT_ID}\",\n",
-    "      \"type\": \"${MOBILE_ROBOT_TYPE}\"\n",
-    "    }],\n",
-    "    \"condition\": {\n",
-    "      \"attrs\": [\"x\", \"y\", \"theta\"]\n",
-    "    }\n",
-    "  },\n",
-    "  \"notification\": {\n",
-    "    \"http\": {\n",
-    "      \"url\": \"http://guide-demo:3000/notify/update-mobilerobot-pos/\"\n",
-    "    },\n",
-    "    \"attrs\": [\"x\", \"y\", \"theta\"]\n",
-    "  }\n",
-    "}\n",
-    "__EOS__"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "example)\n",
-    "```\n",
-    "HTTP/1.1 201 Created\n",
-    "content-length: 0\n",
-    "location: /v2/subscriptions/5cd694cf918aae5e12572d41\n",
-    "fiware-correlator: 94fea8c8-73ce-11e9-bd2e-62712902dfb1\n",
-    "date: Sat, 11 May 2019 09:24:30 GMT\n",
-    "x-envoy-upstream-service-time: 6\n",
-    "server: envoy\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "TOKEN=$(cat ${CORE_ROOT}/secrets/auth-tokens.json | jq '.[0].settings.bearer_tokens[0].token' -r)\n",
-    "curl -sS -H \"Authorization: bearer ${TOKEN}\" -H \"Fiware-Service: ${FIWARE_SERVICE}\" -H \"Fiware-ServicePath: ${MOBILE_ROBOT_SERVICEPATH}\" https://api.${DOMAIN}/orion/v2/subscriptions/ | jq ."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "example)\n",
-    "```json\n",
-    "[\n",
-    "  {\n",
-    "    \"id\": \"5cd620e1d9d5db2ffb119d16\",\n",
-    "    \"status\": \"active\",\n",
-    "    \"subject\": {\n",
-    "      \"entities\": [\n",
-    "        {\n",
-    "          \"idPattern\": \"rosbot2_01\",\n",
-    "          \"type\": \"mobile_robot\"\n",
-    "        }\n",
-    "      ],\n",
-    "      \"condition\": {\n",
-    "        \"attrs\": [\n",
-    "          \"r_mode\",\n",
-    "          \"r_state\",\n",
-    "          \"x\",\n",
-    "          \"y\",\n",
-    "          \"theta\",\n",
-    "          \"move_status\",\n",
-    "          \"move_info\",\n",
-    "          \"voltage\",\n",
-    "          \"current\",\n",
-    "          \"charge\",\n",
-    "          \"capacity\",\n",
-    "          \"design_capacity\",\n",
-    "          \"percentage\"\n",
-    "        ]\n",
-    "      }\n",
-    "    },\n",
-    "    \"notification\": {\n",
-    "      \"timesSent\": 77,\n",
-    "      \"lastNotification\": \"2019-05-11T08:59:56.00Z\",\n",
-    "      \"attrs\": [\n",
-    "        \"r_mode\",\n",
-    "        \"r_state\",\n",
-    "        \"x\",\n",
-    "        \"y\",\n",
-    "        \"theta\",\n",
-    "        \"move_status\",\n",
-    "        \"move_info\",\n",
-    "        \"voltage\",\n",
-    "        \"current\",\n",
-    "        \"charge\",\n",
-    "        \"capacity\",\n",
-    "        \"design_capacity\",\n",
-    "        \"percentage\"\n",
-    "      ],\n",
-    "      \"attrsFormat\": \"legacy\",\n",
-    "      \"http\": {\n",
-    "        \"url\": \"http://cygnus-mongo:5050/notify\"\n",
-    "      },\n",
-    "      \"lastSuccess\": \"2019-05-11T08:59:56.00Z\",\n",
-    "      \"lastSuccessCode\": 200\n",
-    "    }\n",
-    "  },\n",
-    "  {\n",
-    "    \"id\": \"5cd677ccd9d5db2ffb119d19\",\n",
-    "    \"status\": \"active\",\n",
-    "    \"subject\": {\n",
-    "      \"entities\": [\n",
-    "        {\n",
-    "          \"idPattern\": \"rosbot2_01\",\n",
-    "          \"type\": \"mobile_robot\"\n",
-    "        }\n",
-    "      ],\n",
-    "      \"condition\": {\n",
-    "        \"attrs\": [\n",
-    "          \"r_mode\"\n",
-    "        ]\n",
-    "      }\n",
-    "    },\n",
-    "    \"notification\": {\n",
-    "      \"timesSent\": 35,\n",
-    "      \"lastNotification\": \"2019-05-11T08:59:35.00Z\",\n",
-    "      \"attrs\": [\n",
-    "        \"r_mode\"\n",
-    "      ],\n",
-    "      \"attrsFormat\": \"normalized\",\n",
-    "      \"http\": {\n",
-    "        \"url\": \"http://guide-demo:3000/notify/update-mobilerobot-state/\"\n",
-    "      },\n",
-    "      \"lastSuccess\": \"2019-05-11T08:59:35.00Z\",\n",
-    "      \"lastSuccessCode\": 200\n",
-    "    }\n",
-    "  },\n",
-    "  {\n",
-    "    \"id\": \"5cd694cf918aae5e12572d41\",\n",
-    "    \"status\": \"active\",\n",
-    "    \"subject\": {\n",
-    "      \"entities\": [\n",
-    "        {\n",
-    "          \"idPattern\": \"rosbot2_01\",\n",
-    "          \"type\": \"mobile_robot\"\n",
-    "        }\n",
-    "      ],\n",
-    "      \"condition\": {\n",
-    "        \"attrs\": [\n",
-    "          \"x\",\n",
-    "          \"y\",\n",
-    "          \"theta\"\n",
-    "        ]\n",
-    "      }\n",
-    "    },\n",
-    "    \"notification\": {\n",
-    "      \"timesSent\": 1,\n",
-    "      \"lastNotification\": \"2019-05-11T09:24:31.00Z\",\n",
-    "      \"attrs\": [\n",
-    "        \"x\",\n",
-    "        \"y\",\n",
-    "        \"theta\"\n",
-    "      ],\n",
-    "      \"attrsFormat\": \"normalized\",\n",
-    "      \"http\": {\n",
-    "        \"url\": \"http://guide-demo:3000/notify/update-mobilerobot-pos/\"\n",
-    "      },\n",
-    "      \"lastSuccess\": \"2019-05-11T09:24:31.00Z\",\n",
     "      \"lastSuccessCode\": 200\n",
     "    }\n",
     "  }\n",
