update the guide-demo logic to adjust ROSBot2

--- a/docs/en-jupyter_notebook/azure_aks/01_start_pods.ipynb
+++ b/docs/en-jupyter_notebook/azure_aks/01_start_pods.ipynb
@@ -145,9 +145,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "export LED_ON_X=\"0.8\"\n",
+    "export LED_ON_X=\"1.5\"\n",
     "export LED_ON_Y=\"0.0\"\n",
-    "export NEIGHBOR_RADIUS=\"0.2\""
+    "export NEIGHBOR_RADIUS=\"0.4\""
    ]
   },
   {
@@ -166,6 +166,19 @@
    "outputs": [],
    "source": [
     "kubectl get pods -l app=guide-demo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "example)\n",
+    "```\n",
+    "NAME                          READY   STATUS    RESTARTS   AGE\n",
+    "guide-demo-758dd6fc77-hvq6x   1/1     Running   0          19s\n",
+    "guide-demo-758dd6fc77-lh266   1/1     Running   0          19s\n",
+    "guide-demo-758dd6fc77-zcsc2   1/1     Running   0          19s\n",
+    "```"
    ]
   }
  ],
