--- a/docs/en-jupyter_notebook/azure_aks/01_start_pods.ipynb
+++ b/docs/en-jupyter_notebook/azure_aks/01_start_pods.ipynb
@@ -384,6 +384,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "export ZAICO_TOKEN=\"sjf4BqHgSZrrJsH8kJMsRWqoHpGDFPB4\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "envsubst < controller/ksce2019-controller-deployment.yaml | kubectl apply -f -"
    ]
   },
